Changed the h1 and p content

--- a/subscribe.html
+++ b/subscribe.html
@@ -82,7 +82,7 @@
           <img src="assets/images/ng_travel.png" class="img-fluid" alt="Responsive Background Image">
           <div id="second">
             <h1 class="text-dark text-center text-white hero-largetext">Your <span><i>next trip</i></span> starts here</h1>
-            <p class="text-white text-center hero-smalltext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias maiores harum consequuntur illo. Dolore exercitationem, reiciendis aut assumenda nisi itaque distinctio aperiam accusamus quo. Alias consequatur modi aspernatur maxime consequuntur!</p>
+            <p class="text-white text-center hero-smalltext">Subscribe to our weekly newsletters to explore new destinations and meet Lonely Planet's far-flung team of writers and editors. Packed with insightful advice from local experts, our newsletters will bring the world to your inbox.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
               <button type="button" class="btn btn-primary btn-sm btn-lg px-4 gap-3">Learn more</button>
             </div>
