Update the code

--- a/travel-page.html
+++ b/travel-page.html
@@ -45,7 +45,7 @@
                     Stories
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                     <li><a class="dropdown-item" href="#">Adventure Travel</a></li>
+                     <li><a class="dropdown-item" href="travel-page.html">Adventure Travel</a></li>
                     <li><a class="dropdown-item" href="#">Art and Culture</a></li>
                     <li><a class="dropdown-item" href="#">Beaches, Coast and Island</a></li>
                     <li><a class="dropdown-item" href="#">Family Holiday</a></li>
