--- a/subscribe.html
+++ b/subscribe.html
@@ -93,7 +93,7 @@
       <div class="subscription">
         <div class="container py-3">
             <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-              <h1 class="display-4 fw-normal">Pricing for subcription plan</h1>
+              <h1 class="display-4 fw-normal">Pricing for subscription plan</h1>
               <p class="fs-5 text-muted">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quaerat, eveniet provident odit obcaecati reiciendis aspernatur soluta natus neque libero impedit, magnam error, enim officiis quos saepe consequuntur repellendus quae quasi minima fuga dolore. Nisi voluptate, error possimus, corporis architecto sed minus consectetur suscipit voluptatem veniam dolorem voluptatibus tenetur aliquam maxime!</p>
             </div>
         </div>
