--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     Stories
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                     <li><a class="dropdown-item" href="#">Adventure Travel</a></li>
+                     <li><a class="dropdown-item" href="travel-page.html">Adventure Travel</a></li>
                     <li><a class="dropdown-item" href="#">Art and Culture</a></li>
                     <li><a class="dropdown-item" href="#">Beaches, Coast and Island</a></li>
                     <li><a class="dropdown-item" href="#">Family Holiday</a></li>
@@ -64,7 +64,7 @@
                    <li><a class="dropdown-item" href="#">Pictorial and Gifts</a></li> 
                    <li><a class="dropdown-item" href="#">Phrasebooks</a></li> 
                     <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item" href="#">see all shops</a></li>
+                    <li ><a class="dropdown-item" href="#">see all shops</a></li>
                   </ul>
                 </li>
               
@@ -299,7 +299,7 @@
                 <div class="col-6 col-md-2 mb-3">
                   <h5 class="h5-footer">Stories</h5>
                   <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Adventure Travel</a></li>
+                    <li class="nav-item mb-2"><a href="/travel-page.html" class="nav-link p-0 text-muted">Adventure Travel</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Art and Culture</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Beaches, Coast and Island</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Family Holiday</a></li>
