Updated the link

--- a/culture.html
+++ b/culture.html
@@ -46,7 +46,7 @@
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                      <li><a class="dropdown-item" href="travel-page.html">Adventure Travel</a></li>
-                    <li><a class="dropdown-item" href="#">Art and Culture</a></li>
+                    <li><a class="dropdown-item" href="culture.html">Art and Culture</a></li>
                     <li><a class="dropdown-item" href="#">Beaches, Coast and Island</a></li>
                     <li><a class="dropdown-item" href="#">Family Holiday</a></li>
                     <li><a class="dropdown-item" href="#">Festival</a></li>
@@ -145,8 +145,8 @@
             </div><!-- /.col-lg-4 -->
             <div class="col-lg-4">
               <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/>
-                <image href="assets/images/culture/download.jfif" x="0" y="0" height="100%" width="100%" preserveAspectRatio="none"/></svg>
-            <h2 class="fw-normal">Palawanos</h2>
+                <image href="assets/images/culture/download (1).jfif" x="0" y="0" height="100%" width="100%" preserveAspectRatio="none"/></svg>
+            <h2 class="fw-normal">Art</h2>
               <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
               <p><a class="btn btn-secondary" href="">View details &raquo;</a></p>
             </div><!-- /.col-lg-4 -->
@@ -234,8 +234,8 @@
                 <div class="col-6 col-md-2 mb-3">
                   <h5 class="h5-footer">Stories</h5>
                   <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Adventure Travel</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Art and Culture</a></li>
+                    <li class="nav-item mb-2"><a href="travel-page.html" class="nav-link p-0 text-muted">Adventure Travel</a></li>
+                    <li class="nav-item mb-2"><a href="culture.html" class="nav-link p-0 text-muted">Art and Culture</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Beaches, Coast and Island</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Family Holiday</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Festival</a></li>
