--- a/travel-page.html
+++ b/travel-page.html
@@ -46,7 +46,7 @@
                   </a>
                   <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                      <li><a class="dropdown-item" href="travel-page.html">Adventure Travel</a></li>
-                    <li><a class="dropdown-item" href="#">Art and Culture</a></li>
+                    <li><a class="dropdown-item" href="culture.html">Art and Culture</a></li>
                     <li><a class="dropdown-item" href="#">Beaches, Coast and Island</a></li>
                     <li><a class="dropdown-item" href="#">Family Holiday</a></li>
                     <li><a class="dropdown-item" href="#">Festival</a></li>
@@ -211,8 +211,8 @@
                 <div class="col-6 col-md-2 mb-3">
                   <h5 class="h5-footer">Stories</h5>
                   <ul class="nav flex-column">
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Adventure Travel</a></li>
-                    <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Art and Culture</a></li>
+                    <li class="nav-item mb-2"><a href="travel-page.html" class="nav-link p-0 text-muted">Adventure Travel</a></li>
+                    <li class="nav-item mb-2"><a href="culture.html" class="nav-link p-0 text-muted">Art and Culture</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Beaches, Coast and Island</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Family Holiday</a></li>
                     <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-muted">Festival</a></li>
