Responsive paragraph in travel and culture

--- a/culture.html
+++ b/culture.html
@@ -91,7 +91,7 @@
               <div class="container">
                 <div class="carousel-caption text-start">
                   <h1 class="">Indigenous people</h1>
-                  <p class="">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est nobis atque quas voluptas aut! Aperiam nostrum laudantium reprehenderit minus officia quos architecto ut nulla facilis neque odit, dolorum mollitia saepe!</p>
+                  <p  class="travelculture-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est nobis atque quas voluptas aut! Aperiam nostrum laudantium reprehenderit minus officia quos architecto ut nulla facilis neque odit, dolorum mollitia saepe!</p>
                   <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
                 </div>
               </div>
@@ -101,7 +101,7 @@
               <div class="container">
                 <div class="carousel-caption">
                   <h1 >Culture</h1>
-                  <p>Explore the Philippines’ game reserve and wildlife sanctuary in Calauit Safari Park, a 3,700 hectare island off the coast of Palawan. It is home to various species of exotic African and endemic Palawan flora and fauna where hundreds of giraffes, elans, waterbucks, Calamian deer, monkeys, fresh water crocodiles, zebras, bear cats, bushbuck and a variety of birds roam freely. This tropical safari should not be missed on your visit to Coron.</p>
+                  <p  class="travelculture-p">Explore the Philippines’ game reserve and wildlife sanctuary in Calauit Safari Park, a 3,700 hectare island off the coast of Palawan. It is home to various species of exotic African and endemic Palawan flora and fauna where hundreds of giraffes, elans, waterbucks, Calamian deer, monkeys, fresh water crocodiles, zebras, bear cats, bushbuck and a variety of birds roam freely. This tropical safari should not be missed on your visit to Coron.</p>
                   <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
                 </div>
               </div>
@@ -111,7 +111,7 @@
               <div class="container">
                 <div class="carousel-caption text-end">
                   <h1>Tradition</h1>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae debitis rerum eaque dolore in praesentium, voluptas quas aliquam, excepturi itaque doloribus. Fugit doloribus repellendus dolor voluptates velit architecto ratione..</p>
+                  <p class="travelculture-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae debitis rerum eaque dolore in praesentium, voluptas quas aliquam, excepturi itaque doloribus. Fugit doloribus repellendus dolor voluptates velit architecto ratione..</p>
                   <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
                 </div>
               </div>
@@ -191,7 +191,7 @@
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading fw-normal lh-1">Lorem ipsum dolor sit amet consectetur adipisicing elit.. <span class="text-muted">Lorem ipsum dolor sit amet.</span></h2>
-              <p class="lead"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio recusandae minus, corporis velit eaque dolore similique saepe itaque enim non, veritatis sequi aliquid ducimus necessitatibus, explicabo reprehenderit sint id dicta.</p>
+              <p class="lead "> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio recusandae minus, corporis velit eaque dolore similique saepe itaque enim non, veritatis sequi aliquid ducimus necessitatibus, explicabo reprehenderit sint id dicta.</p>
             </div>
             <div class="col-md-5">
               <img class="d-block w-100" src="assets/images/culture/palawan-baragatan-festival-cuyo.webp" alt=""> 
