--- a/travel-page.html
+++ b/travel-page.html
@@ -91,8 +91,8 @@
               <div class="container">
                 <div class="carousel-caption text-start">
                   <h1 class="text-dark">Experience our island resorts</h1>
-                  <p class="text-dark">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est nobis atque quas voluptas aut! Aperiam nostrum laudantium reprehenderit minus officia quos architecto ut nulla facilis neque odit, dolorum mollitia saepe!</p>
-                  <p><a class="btn btn-lg btn-primary" href="#">Book now with your loved ones</a></p>
+                  <p class="text-dark travelculture-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est nobis atque quas voluptas aut! Aperiam nostrum laudantium reprehenderit minus officia quos architecto ut nulla facilis neque odit, dolorum mollitia saepe!</p>
+                  <p><a class="btn btn-lg btn-primary" href="#">Book now</a></p>
                 </div>
               </div>
             </div>
@@ -101,8 +101,8 @@
               <div class="container">
                 <div class="carousel-caption">
                   <h1>The Paradise on Earth</h1>
-                  <p>Explore the Philippines’ game reserve and wildlife sanctuary in Calauit Safari Park, a 3,700 hectare island off the coast of Palawan. It is home to various species of exotic African and endemic Palawan flora and fauna where hundreds of giraffes, elans, waterbucks, Calamian deer, monkeys, fresh water crocodiles, zebras, bear cats, bushbuck and a variety of ..............</p>
-                  <p><a class="btn btn-lg btn-primary" href="#">Discover the kingdome of Animals</a></p>
+                  <p class="travelculture-p">Explore the Philippines’ game reserve and wildlife sanctuary in Calauit Safari Park, a 3,700 hectare island off the coast of Palawan. It is home to various species of exotic African and endemic Palawan flora and fauna where hundreds of giraffes, elans, waterbucks, Calamian deer, monkeys, fresh water crocodiles, zebras, bear cats, bushbuck and a variety of ..............</p>
+                  <p><a class="btn btn-lg btn-primary" href="#">Discover the new</a></p>
                 </div>
               </div>
             </div>
@@ -110,8 +110,8 @@
               <img class="d-block w-100" src="assets/images/travel/sld6.jpg" alt="">
               <div class="container">
                 <div class="carousel-caption text-end">
-                  <h1>Ultimate Adventure?.</h1>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae debitis rerum eaque dolore in praesentium, voluptas quas aliquam, excepturi itaque doloribus. Fugit doloribus repellendus dolor voluptates velit architecto ratione..</p>
+                  <h1>Ultimate Adventure?</h1>
+                  <p class="dark travelculture-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae debitis rerum eaque dolore in praesentium, voluptas quas aliquam, excepturi itaque doloribus. Fugit doloribus repellendus dolor voluptates velit architecto ratione..</p>
                   <p><a class="btn btn-lg btn-primary" href="#">Let's join and try</a></p>
                 </div>
               </div>
