Added h1 responsive styles

--- a/culture.html
+++ b/culture.html
@@ -90,7 +90,7 @@
               <img class="d-block w-100" src="assets/images/culture/indigenouspeople.jpg" alt="">
               <div class="container">
                 <div class="carousel-caption text-start">
-                  <h1 class="">Indigenous people</h1>
+                  <h1 class="travelculture-h">Indigenous people</h1>
                   <p  class="travelculture-p">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est nobis atque quas voluptas aut! Aperiam nostrum laudantium reprehenderit minus officia quos architecto ut nulla facilis neque odit, dolorum mollitia saepe!</p>
                   <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
                 </div>
@@ -100,7 +100,7 @@
               <img class="d-block w-100" src="assets/images/culture/tradition_.jpg" alt="">
               <div class="container">
                 <div class="carousel-caption">
-                  <h1 >Culture</h1>
+                  <h1 class="travelculture-h" >Culture</h1>
                   <p  class="travelculture-p">Explore the Philippines’ game reserve and wildlife sanctuary in Calauit Safari Park, a 3,700 hectare island off the coast of Palawan. It is home to various species of exotic African and endemic Palawan flora and fauna where hundreds of giraffes, elans, waterbucks, Calamian deer, monkeys, fresh water crocodiles, zebras, bear cats, bushbuck and a variety of birds roam freely. This tropical safari should not be missed on your visit to Coron.</p>
                   <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
                 </div>
@@ -110,7 +110,7 @@
               <img class="d-block w-100" src="assets/images/culture/culture.jpg" alt="">
               <div class="container">
                 <div class="carousel-caption text-end">
-                  <h1>Tradition</h1>
+                  <h1 class="travelculture-h">Tradition</h1>
                   <p class="travelculture-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae debitis rerum eaque dolore in praesentium, voluptas quas aliquam, excepturi itaque doloribus. Fugit doloribus repellendus dolor voluptates velit architecto ratione..</p>
                   <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
                 </div>
