Set to white the background of text

--- a/travel-page.html
+++ b/travel-page.html
@@ -110,8 +110,8 @@
               <img class="d-block w-100" src="assets/images/travel/sld6.jpg" alt="">
               <div class="container">
                 <div class="carousel-caption text-end">
-                  <h1 class="travelculture-h">Ultimate Adventure?</h1>
-                  <p class="travelculture-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae debitis rerum eaque dolore in praesentium, voluptas quas aliquam, excepturi itaque doloribus. Fugit doloribus repellendus dolor voluptates velit architecto ratione..</p>
+                  <h1 class="travelculture-h text-bg-light">Ultimate Adventure?</h1>
+                  <p class="travelculture-p text-bg-light">Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quae debitis rerum eaque dolore in praesentium, voluptas quas aliquam, excepturi itaque doloribus. Fugit doloribus repellendus dolor voluptates velit architecto ratione..</p>
                   <p><a class="btn btn-lg btn-primary" href="#">Let's join and try</a></p>
                 </div>
               </div>
