--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
           <img src="assets/images/amanpulo.jpg" class="img-fluid" alt="Responsive Background Image">
           <div id="second">
             <h1 class="text-dark text-center text-white hero-largetext">Discover <span><i>Story-worthy</i></span>  Travel Moments</h1>
-            <p class="text-white text-center hero-smalltext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias maiores harum consequuntur illo. Dolore exercitationem, reiciendis aut assumenda nisi itaque distinctio aperiam accusamus quo. Alias consequatur modi aspernatur maxime consequuntur!</p>
+            <p class="text-white text-center hero-smalltext">Experience the pinnacle of exceptional service at the world
+              ’s best island this summer. Our Be G.R.E.E.N., Be Clean Enhanced Care Program provides the highest level of safety for
+              guests, from secured accommodation at their chosen island destination to their low-density activities in Palawan.
+              We look forward to welcoming you!</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
               <button type="button" class="btn btn-primary btn-sm btn-lg px-4 gap-3">Learn more</button>
             </div>
